--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@
     <a href="public/about.html">About Me</a>
     <br/>
     <a href = "public/contact.html">Contact Me</a>
+    <br />
+    <a href ="../Capstone1-Resume/index.html">My Resume</a>
 </body>
