--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
     <br/>
     <a href = "public/contact.html">Contact Me</a>
     <br />
-    <a href ="../Capstone1-Resume/index.html">My Resume</a>
+    <a href ="./public/index.html">My Resume</a>
 </body>
