--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>My Resume</title>
     </head>
     <body>
-        <img src="frank.jpeg" height="200" alt ="image of myself"/>
+        <img src="../assets/images/frank.jpeg" height="200" alt ="image of myself"/>
 
         <h1>Danny Frank, MBA, NIC</h1>
         <h2>Summary</h2>
@@ -59,7 +59,7 @@
     </body>
     <hr / >
     <p><h2>Additional Links</h2>
-        <a href = "../4.3-HTML-Porfolio-Project/index.html">Portfolio</a>
+        <a href = "../index.html">Portfolio</a>
     </p>
     <hr />
     <footer>
